--- a/mestre.bib
+++ b/mestre.bib
@@ -33,6 +33,14 @@ type = {Mestrado}
  edition   = {1nd},
 }
 
+@Article{bib:Lo12,
+ author    = {S.H. Lo},
+ title     = {Parallel Delaunay triangulation — Application to two dimensions},
+ journal = {Finite Elements in Analysis and Design},
+ pages     = {37–48},
+ year      = {2012}
+}
+
 
 
 
