--- a/pre.tex
+++ b/pre.tex
@@ -44,7 +44,7 @@
 \end{center}
 \par
 \vspace{90pt}
-\hspace*{175pt}\parbox{7.6cm}{{\large Dissertação apresentada ao Departamento de Computação da Universidade Federal do Ceará, para a obtenção de Título de Mestre}}
+\hspace*{175pt}\parbox{7.6cm}{{\large Pré-proposta apresentada ao Departamento de Computação da Universidade Federal do Ceará}}
 
 \par
 \vspace{1em}
@@ -71,7 +71,7 @@ Aluno, Daniel Nascimento Teixeira.
 
 \begin{enumerate}
 \item Malhas
-\item Subdivisão de domínio
+\item Decomposição de domínio
 \item Paralelismo
 \end{enumerate}
 I. Universidade Federal do Ceará. Departamento de Computação.
